Remove "prevents initial flickering"

--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -189,12 +189,6 @@ dialog {
   }
 }
 
-// Prevents initial flickering
-:host(.gx-dialog-prevent-flickering) {
-  // Necessary to override visibility: inherit from Stencil's hydration
-  visibility: hidden !important;
-}
-
 // - - - - - - - - - - - - - - - -
 //              Drag
 // - - - - - - - - - - - - - - - -
